@@ -78,6 +78,11 @@ static gboolean    about_dialog_anim_expose   (GtkWidget       *widget,
 static void        about_dialog_reshuffle     (GimpAboutDialog *dialog);
 static gboolean    about_dialog_timer         (gpointer         data);
 
+#ifdef GIMP_UNSTABLE
+static void        about_dialog_add_unstable_message (GtkWidget       *vbox,
+                                                      GimpAboutDialog *dialog);
+#endif
+
 
 GtkWidget *
 about_dialog_create (GimpContext *context)
@@ -148,7 +153,12 @@ about_dialog_create (GimpContext *context)
       children = gtk_container_get_children (GTK_CONTAINER (container));
 
       if (GTK_IS_VBOX (children->data))
-        about_dialog_add_animation (children->data, dialog);
+        {
+          about_dialog_add_animation (children->data, dialog);
+#ifdef GIMP_UNSTABLE
+          about_dialog_add_unstable_message (children->data, dialog);
+#endif
+        }
       else
         g_warning ("%s: ooops, no vbox in this container?", G_STRLOC);
 
@@ -585,3 +595,25 @@ about_dialog_timer (gpointer data)
   /* else keep the current timeout */
   return TRUE;
 }
+
+#ifdef GIMP_UNSTABLE
+
+static void
+about_dialog_add_unstable_message (GtkWidget       *vbox,
+                                   GimpAboutDialog *dialog)
+{
+    gchar     *text;
+    GtkWidget *label;
+    
+    text = g_strdup_printf ("<span style=\"italic\">%s</span>",
+                            _("This is an unstable development release."));
+    label = gtk_label_new (NULL);
+    gtk_label_set_markup (GTK_LABEL (label), text);
+    gtk_box_pack_start (GTK_BOX (vbox), label, FALSE, FALSE, 0);
+    gtk_box_reorder_child (GTK_BOX (vbox), label, 2);
+    gtk_widget_show (label);
+    g_free (text);
+}
+
+#endif
+
