@@ -1,3 +1,8 @@
+2006-08-15  Mukund Sivaraman  <muks@mukund.org>
+
+	* app/dialogs/about-dialog.c: Added a label about unstable status
+	to the about dialog.
+
 2006-08-15  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/Makefile.am
